# customer_churn_analysis

./: customer_churn_eda.ipynb  main.py  pyproject.toml  requirements.txt
dataset/: customer churn.csv.xlsx  info_datased.md
